<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDialogContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_dialog_bg"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/message_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="32dp"
            android:drawableStart="@drawable/ic_baseline_warning_24"
            android:drawablePadding="4dp"
            android:text="@string/delete_timer"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/no_button"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="10dp"
        android:padding="@dimen/touch_target_padding"
        android:text="@string/no"
        android:textColor="@color/off_white"
        android:textSize="14sp"
        app:backgroundTint="@color/grey_800"
        app:cornerRadius="12dp"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="@id/dialog_layout"
        app:layout_constraintEnd_toStartOf="@id/yes_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/yes_button"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="40dp"
        android:padding="@dimen/touch_target_padding"
        android:text="@string/yes"
        android:textSize="14sp"
        app:backgroundTint="@color/red_500"
        app:cornerRadius="12dp"
        app:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="@id/dialog_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/no_button"
        app:layout_constraintTop_toBottomOf="@id/dialog_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>