<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.addtimer.SetRestTimeFragment">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_margin="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/rest_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_rest_time"
            android:drawablePadding="8dp"
            android:text="@string/rest_time"
            android:textColor="?attr/rest"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rest_time_tv">

            <TextView
                android:id="@+id/rest_minute_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minute"
                app:layout_constraintBottom_toTopOf="@id/rest_minute_np"
                app:layout_constraintEnd_toEndOf="@id/rest_minute_np"
                app:layout_constraintStart_toStartOf="@id/rest_minute_np" />

            <com.android.mhs.fitimer.ui.custom.numberpicker.CustomNumberPicker
                android:id="@+id/rest_minute_np"
                style="@style/NPWidget.Holo.NumberPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/rest_minute_np"
                app:layout_constraintRight_toLeftOf="@id/rest_second_np"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rest_second_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second"
                app:layout_constraintBottom_toTopOf="@id/rest_second_np"
                app:layout_constraintEnd_toEndOf="@id/rest_second_np"
                app:layout_constraintStart_toStartOf="@id/rest_second_np" />

            <com.android.mhs.fitimer.ui.custom.numberpicker.CustomNumberPicker
                android:id="@+id/rest_second_np"
                style="@style/NPWidget.Holo.NumberPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>