<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        android:paddingTop="@dimen/bottom_top_space"
        android:paddingBottom="@dimen/bottom_top_space"
        app:behavior_hideable="true"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
        tools:context=".ui.main.addtimer.AddTimerFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/add_timer_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/add_timer_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:navigationIcon="@drawable/ic_baseline_clear_24"
                app:title="@string/add_timer" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/timer_view_pager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/side_space"
            android:layout_marginTop="@dimen/bottom_top_space"
            android:layout_marginEnd="@dimen/side_space"
            android:layout_marginBottom="@dimen/bottom_top_space"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_timer_appbar" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_space"
            android:layout_marginEnd="@dimen/side_space"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/prev_button"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="0.3"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:enabled="false"
                android:onClick="@{onClickListener}"
                android:padding="8dp"
                android:text="@string/prev"
                app:cornerRadius="@dimen/out_radius"
                app:icon="@drawable/ic_baseline_navigate_before_24"
                app:iconTint="@color/prev_button"
                app:strokeColor="@color/prev_button"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_button"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="0.7"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="@{onClickListener}"
                android:padding="8dp"
                android:text="@string/next"
                android:textColor="@color/off_white"
                app:backgroundTint="?attr/status_bar"
                app:cornerRadius="@dimen/out_radius"
                app:icon="@drawable/ic_baseline_navigate_next_24"
                app:iconGravity="end"
                app:iconTint="@color/off_white" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>